--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-        <a href="page.hmtl">Click Here</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Click Here</a>
     
     </body>
 </html>
