--- a/home.html
+++ b/home.html
@@ -1,12 +1,6 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Hey Wassup!
-        </title>
+        <head>
+            <meta charset="utf-8">
+            <title>Contact form tutorial</title>
     </head>
-    <body>
-
-        <a href="page.hmtl">Click Here</a>
-    
-    </body>
-</html>
